# ob

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  manager.cpp  manager.h  message.h  order_book.cpp  order_book.h  test.cpp
util/: check_equiv_streams.py  empirical_analysis.py  orderbook_test.cpp  write_test.cpp
